# django-command-autocomplete

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
django_command_autocomplete/: __init__.py  command_discovery.py
django_command_autocomplete/generators/: base.py  bash.py  powershell.py
django_command_autocomplete/management/commands/: generate_shell_completion.py
tests/: conftest.py  test_commands.py
