[project]
name = "django-command-autocomplete"
version = "0.1.2"
description = "Terminal tab completion for Django management commands"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Stevoni", email = "your.email@example.com" }
]
dependencies = [
    "django>=3.2",
]

[project.urls]
Homepage = "https://github.com/stevoni/django-command-autocomplete"
Repository = "https://github.com/stevoni/django-command-autocomplete.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_command_autocomplete"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.9.10",
]
test = [
    "pytest>=7.0",
    "pytest-django>=4.5",
]
